<resources>
    <string name="app_name">EasySoccer1</string>
    <string name="forgotPassword"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="createUser"><u>Registrarse como Usuario</u></string>
    <string name="createAdmin"><u>Registrarse como administrador</u></string>
    <string name="RegisterAdmin"> Registro de Administradores</string>
    <string name="RegisterUser"> Registro de Usuarios</string>
    <string name="title_activity_navigation_admin">NavigationAdminActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Canchas</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_stats">Estadísticas</string>
    <string name="title_activity_navigation_user">NavigationUserActivity</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>