<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.easysoccer1.ui.view.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.easysoccer1.ui.view.GoalsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_reserve_admin" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.easysoccer1.ui.view.ReserveAdminFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.easysoccer1.ui.view.StatsAdminFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats_admin"/>
</navigation>