<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailLayout"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="12dp"
            android:hint="Email:"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordLayout"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailLayout"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLayout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/lock_icon"
            android:drawablePadding="12dp"
            android:hint="Contraseña:"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="end"
        android:text="@string/forgotPassword"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="Iniciar Sesión"
        app:layout_constraintEnd_toEndOf="@+id/textViewForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLayout" />

    <TextView
        android:id="@+id/TextViewCreateUser"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/createUser"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/TextViewCreateAdmin"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/createAdmin"
        app:layout_constraintEnd_toEndOf="@+id/TextViewCreateUser"
        app:layout_constraintStart_toStartOf="@+id/TextViewCreateUser"
        app:layout_constraintTop_toBottomOf="@+id/TextViewCreateUser" />
</androidx.constraintlayout.widget.ConstraintLayout>